<resources>
    <string name="app_name">Skin Scan</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_text">Looking for medicine?</string>
    <string name="hi">Hi,</string>
    <string name="desc_name">Lets Solve Your Problem Desease !</string>
    <string name="title_type">General Of Type Skin Desease</string>
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="hint_pw">Enter your Password</string>
    <string name="hint_gmail">Enter your Email</string>
    <string name="hint_username">Enter your Username</string>
    <string name="btn_login">Login</string>
    <string name="desc_setting">Setting</string>
    <string name="Home_logo">logo</string>
    <string name="home_img">img_doctor\n</string>
    <string name="ic_home">ic_home</string>
    <string name="ic_articleHome">ic_articlehome</string>
    <string name="bg_cam">bg_cam</string>
    <string name="ic_cam">ic_cam</string>
    <string name="SignIn">Sign In</string>
    <string name="txt_decisionLog">Or Sign In With</string>
    <string name="txt_decisionReg">Or Sign Up With</string>
    <string name="desc_login">Don\'t have an Account yet?</string>
    <string name="desc_regis">Already have an Account yet?</string>
    <string name="SignUp">Sign Up</string>
    <string name="desc_splashScreen">Make Your Skin Healthy And Shiny</string>
    <string name="img_detail">img_detail</string>
    <string name="Analyze">Scan This !</string>
    <string name="result_of_scan">Result of Scan</string>
    <string name="diagnosed">Diagnosed</string>
    <string name="drug_recommendation">Drug Recommendation</string>
    <string name="disease_prevention">Disease Prevention</string>
</resources>