<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.HomeActivity">

    <ImageView
        android:id="@+id/setting"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/setting"
        android:layout_marginStart="360dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/desc_setting" />




    <TextView
        android:id="@+id/nameapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/primaryColor">

    </TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Home_logo" />

    <SearchView
        android:id="@+id/sv_main"
        android:background="@drawable/bg_search"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameapp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:queryHint="@string/search_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:layout_margin="30dp"
        android:textSize="25sp"
        android:text="@string/hi"
        android:textColor="@color/primaryColor"
        android:fontFamily="@font/roboto_medium"

        android:layout_below="@id/sv_main"/>

    <LinearLayout
        android:id="@+id/opening"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@id/sv_main"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:paddingStart="40dp"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:textSize="25sp"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_name"
            android:textColor="@color/blue_transparan"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp" />

        <ImageView
            android:id="@+id/img_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/img_doctor"
            android:contentDescription="@string/home_img" />
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/title_type"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/primaryColor"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/bg_rv"
            android:layout_below="@id/title"
            android:layout_width="370dp"
            android:layout_height="215dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/bg_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/title"
            android:layout_width="350dp"
            android:layout_height="600dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/bg_search"
            android:orientation="horizontal"/>

        <ImageView
            android:layout_below="@id/title"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="160dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/shape_menu"/>

        <LinearLayout
            android:id="@+id/tab_text"
            android:layout_below="@id/title"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginStart="49dp"
                android:textColor="@color/thirdColor"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/home">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/article"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/thirdColor"
                android:text="@string/article">
            </TextView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:src="@drawable/history"
                android:layout_marginStart="123dp"
                android:textColor="@color/thirdColor"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/history">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/profile"
                android:textColor="@color/thirdColor"
                android:fontFamily="@font/roboto_medium"
                android:textSize="12sp"
                android:text="@string/profile">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_img"
            android:layout_below="@id/title"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="19dp"
                android:layout_marginStart="50dp"
                android:src="@drawable/home"
                android:contentDescription="@string/ic_home">

            </ImageView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="19dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/article"
                android:contentDescription="@string/ic_articlehome">
            </ImageView>


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="19dp"
                android:src="@drawable/history"
                android:layout_marginStart="130dp">
            </ImageView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="19dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/profile">
            </ImageView>
        </LinearLayout>


    </RelativeLayout>
    <ImageView
        android:id="@+id/square"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/oval"
        android:layout_marginTop="650dp"
        android:contentDescription="@string/bg_cam" />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/camera"
        android:layout_marginTop="665dp"
        android:contentDescription="@string/ic_cam">

    </ImageView>





</RelativeLayout>