<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:text="@string/SignIn"
            android:textColor="@color/primaryColor"
            android:fontFamily="@font/roboto_medium"
            android:textSize="26sp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/hint_gmail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:hint="@string/hint_pw"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/roboto_medium" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:text="@string/SignIn"
        android:layout_below="@id/layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:width="300dp"
        android:textColor="@color/thirdColor"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/line_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="10dp">

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="9dp"
            android:background="@color/secondaryColor"
            android:visibility="visible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_decisionLog" />

        <View
            android:layout_width="122dp"
            android:layout_height="1dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/secondaryColor"
            android:visibility="visible" />
    </LinearLayout>


        <ImageView
            android:id="@+id/ic_google"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@id/line_signin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_google"
            android:src="@drawable/ic_google" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_google"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_login"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/SignUp"
            android:fontFamily="@font/roboto_italic"/>

    </LinearLayout>



</RelativeLayout>