<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/diagnosingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_of_scan"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/diagnosed"
        android:background="@drawable/edittext_shape"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:background="@drawable/shape_menu"
            android:id="@+id/titlediagnosingData"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/diagnosed"
            android:textSize="18sp"
            android:textColor="@color/thirdColor"
            android:fontFamily="@font/roboto_medium"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/drug_Recoomend"
        android:background="@drawable/edittext_shape"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:background="@drawable/shape_menu"
            android:id="@+id/titleDrugRecommendationData"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/drug_recommendation"
            android:textSize="18sp"
            android:textColor="@color/thirdColor"
            android:fontFamily="@font/roboto_medium"/>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/desease_prevention"
        android:background="@drawable/edittext_shape"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:background="@drawable/shape_menu"
            android:id="@+id/titleDeseasePreventionData"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/disease_prevention"
            android:textSize="18sp"
            android:textColor="@color/thirdColor"
            android:fontFamily="@font/roboto_medium"/>


    </androidx.cardview.widget.CardView>

</LinearLayout>
